# vcs-srs-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  assets_embed.go  control.proto  example.config.yaml  go.mod  go.sum  headless.go  main.go  server.toml  shared.go  srs.proto  vcs-auth-plugin.proto  wails.json
.github/: dependabot.yml  release.yml  test.yml
.github/workflows/: full-test.yml  release.yml  test.yml
.task/checksum/: common-install-frontend-deps  windows-common-build-frontend  windows-common-generate-bindings
app/: app.go  app_test.go  clients.go  coalitions.go  linux.go  server_control.go  settings.go  windows.go
config/: log4rs.yaml  server.toml
control/: health.go  server.go
docs/superpowers/plans/: 2026-03-28-go-review-fixes.md  2026-03-29-go-review-fixes-2.md
docs/superpowers/specs/: 2026-03-28-go-review-fixes-2-design.md  2026-03-28-go-review-fixes-design.md
events/: bus.go  bus_test.go  events.go
frontend/: index.html  package-lock.json  package.json  package.json.md5  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx  theme.ts  types.ts  vite-env.d.ts
frontend/src/assets/style/: index.scss  variables.module.scss
frontend/src/assets/style/components/: content-wrapper.scss  footer.scss  header.scss  message-wrapper.scss  (+1 more)
frontend/src/components/: ClientEntry.tsx  ClosingAlert.tsx  CoalitionEntry.tsx  ContentWrapper.tsx  Footer.tsx  FrequencyForm.tsx  Header.tsx  MessageWrapper.tsx  Navigation.tsx  ServerControl.tsx
frontend/src/pages/: BanManagement.tsx  ClientList.tsx  Coalitions.tsx  FrequencyPage.tsx  Settings.tsx
rest/: router.go
services/: clients.go  coalitions.go  notification.go  server_control.go  settings.go
src/: config.rs  error.rs  event.rs  lib.rs  main.rs
src/control/: mod.rs  routes.rs  socket.rs
src/gui/: app.rs
src/network/: mod.rs  tcp_sync.rs  types.rs  udp.rs  upd_voice.rs  utils.rs
src/network/tcp/: connection.rs  handler.rs  mod.rs
src/state/: client.rs  mod.rs
src/states/: client.rs  events.rs  mod.rs  radio.rs  server.rs
src/ui/: mod.rs  state.rs
src/utils/: mod.rs  network.rs
src/voice/: handler.rs  mod.rs
srs/: auth_service.go  plugin_client.go  service.go  srs.pb.go  srs_service.go  utils.go
state/: admin.go  distribution.go  server.go  settings.go  snapshot.go
tests/: integration_test.rs
utils/: auth.go  auth_test.go  context.go  general.go  logger.go  rest.go  slice.go
voice/: protocol.go  server.go  server_test.go
voiceontrol/: client.go  service.go  utils.go
(+5 files in other folders)
