[package]
name = "vngd-srs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
eframe = { version = "0.30.0", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
egui = "0.30.0"
image = "0.25.5"
log4rs = "1.3.0"
log = "0.4.22"
