[package]
name = "vngd-srs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
serde_json = "1.0.134"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
eframe = { version = "0.30.0", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
env_logger = { version = "0.11.6", default-features = false, features = [
    "auto-color",
    "humantime",
] }
egui = "0.30.0"
image = "0.25.5"
log4rs = "1.3.0"
log = "0.4.22"
sha2 = "0.10.8"
tokio = { version = "1.42.0", features = ["full"] }
thiserror = "2.0.9"
async-trait = "0.1"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
