[package]
name = "vngd-srs-server"
version = "0.0.2"
edition = "2021"

[dependencies]
phf = { version = "0.11.3", features = ["macros"] }
serde_json = { version = "1.0.140" }
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.8.20" }
eframe = { version = "0.31.1", features = ["default", "__screenshot"] }
env_logger = { version = "0.11.7", default-features = false, features = [
    "auto-color",
    "humantime",
] }
egui = { version = "0.31.1" }
egui_dock = { version = "0.16.0" }
image = { version = "0.25.5" }
log4rs = { version = "1.3.0" }
log = { version = "0.4.26" }
sha2 = { version = "0.10.8" }
tokio = { version = "1.44.1", features = ["full"] }
thiserror = { version = "2.0.12" }
async-trait = { version = "0.1.88" }
uuid = { version = "1.16.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
axum = { version = "0.8.1" }
socketioxide = { version = "0.16.1", features = ["state"] }
